# conflation-with-llm

./: .gitignore  README.md  pyproject.toml
artifacts/: data_audit.json  split_manifest.csv
artifacts/encoder/google__electra-small-discriminator/full/seed-42/: metadata.json  predictions.csv
artifacts/encoder/microsoft__MiniLM-L12-H384-uncased/full/seed-42/: metadata.json  predictions.csv
artifacts/encoder/microsoft__deberta-v3-small/full/seed-42/: metadata.json  predictions.csv
artifacts/prompt/Qwen__Qwen2.5-1.5B-Instruct/full/zero/: metadata.json  predictions.csv
artifacts/reports/: benchmark.md  run_metrics.csv  summary.csv
configs/: benchmark.json
docs/: four-model-gpu-experiment-report-en.md  four-model-gpu-experiment-report.md  report.css
results/: context_results.md
scripts/: build_experiment_report.py
src/conflation_benchmark/: __init__.py  cli.py  config.py  data.py  encoder.py  metrics.py  prompting.py  report.py  runtime.py  serialization.py
tests/: test_data.py  test_detailed_report.py  test_metrics.py  test_prompting.py  test_report.py  test_serialization.py
