[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conflation-benchmark"
version = "0.1.0"
description = "Reproducible small-model benchmarks for place conflation"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.31",
  "datasets>=2.20",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "pyarrow>=15",
  "protobuf>=4.25",
  "scikit-learn>=1.4",
  "sentencepiece>=0.2",
  "tabulate>=0.9",
  "torch>=2.2",
  "transformers>=4.48",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.12"]

[project.scripts]
benchmark = "conflation_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
